--- a/src/main/resources/com/example/p2gui/view.fxml
+++ b/src/main/resources/com/example/p2gui/view.fxml
@@ -99,13 +99,13 @@
                                     <CheckBox fx:id="studyAbroad" disable="true" mnemonicParsing="false" text="Study Abroad" />
                                  </children>
                               </HBox>
-                              <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
+                              <HBox alignment="CENTER_LEFT" prefHeight="68.0" prefWidth="460.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
                                  <children>
                                     <Button fx:id="tuitionDue" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#calculateTuition" prefHeight="25.0" prefWidth="96.0" text="Tuition Due" />
                                     <Label alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="18.0" text="\$" />
-                                    <TextArea fx:id="amountDue" editable="false" prefHeight="37.0" prefWidth="184.0" promptText="0.00">
+                                    <TextArea fx:id="amountDue" editable="false" minHeight="-Infinity" minWidth="-Infinity" prefHeight="14.0" prefWidth="164.0" promptText="0.00">
                                        <HBox.margin>
-                                          <Insets top="13.0" />
+                                          <Insets top="4.0" />
                                        </HBox.margin>
                                     </TextArea>
                                  </children>
@@ -129,7 +129,7 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <GridPane layoutX="14.0" layoutY="13.0" prefHeight="251.0" prefWidth="603.0">
+                        <GridPane layoutX="14.0" layoutY="13.0" prefHeight="173.0" prefWidth="603.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="297.0" minWidth="10.0" prefWidth="129.0" />
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="549.0" minWidth="10.0" prefWidth="474.0" />
@@ -142,7 +142,7 @@
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="130.0" text="Student Name" />
+                              <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="130.0" text="Name" />
                               <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="134.0" text="Major" GridPane.rowIndex="1" />
                               <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="135.0" text="Payment Amount" GridPane.rowIndex="2" />
                               <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="134.0" text="Payment Date" GridPane.rowIndex="3" />
@@ -165,9 +165,9 @@
                               </HBox>
                               <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
                                  <children>
-                                    <TextField fx:id="studentNamePaying" prefHeight="34.0" prefWidth="308.0" promptText="Student Name">
+                                    <TextField fx:id="studentNamePaying" prefHeight="20.0" prefWidth="308.0" promptText="Student Name">
                                        <HBox.margin>
-                                          <Insets top="9.0" />
+                                          <Insets top="5.0" />
                                        </HBox.margin>
                                     </TextField>
                                  </children>
@@ -175,23 +175,23 @@
                               <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                  <children>
                                     <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="52.0" prefWidth="15.0" text="\$" />
-                                    <TextField fx:id="paymentAmount" prefHeight="32.0" prefWidth="282.0" promptText="0.00">
+                                    <TextField fx:id="paymentAmount" prefHeight="15.0" prefWidth="282.0" promptText="0.00">
                                        <HBox.margin>
-                                          <Insets top="9.0" />
+                                          <Insets top="5.0" />
                                        </HBox.margin>
                                     </TextField>
                                  </children>
                               </HBox>
                               <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                                  <children>
-                                    <DatePicker fx:id="datePicker" editable="false" prefHeight="33.0" prefWidth="282.0">
+                                    <DatePicker fx:id="datePicker" editable="false" prefHeight="8.0" prefWidth="282.0">
                                        <HBox.margin>
-                                          <Insets left="25.0" top="9.0" />
+                                          <Insets left="25.0" top="5.0" />
                                        </HBox.margin>
                                     </DatePicker>
-                                    <Button fx:id="pay" mnemonicParsing="false" onAction="#paying" prefHeight="33.0" prefWidth="52.0" text="Pay">
+                                    <Button fx:id="pay" mnemonicParsing="false" onAction="#paying" prefHeight="7.0" prefWidth="52.0" text="Pay">
                                        <HBox.margin>
-                                          <Insets top="9.0" />
+                                          <Insets top="5.0" />
                                        </HBox.margin>
                                     </Button>
                                  </children>
@@ -199,14 +199,14 @@
                               <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                                  <children>
                                     <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="52.0" prefWidth="15.0" text="\$" />
-                                    <TextField fx:id="amountFinanced" prefHeight="32.0" prefWidth="282.0" promptText="0.00">
+                                    <TextField fx:id="amountFinanced" prefHeight="10.0" prefWidth="282.0" promptText="0.00">
                                        <HBox.margin>
-                                          <Insets top="9.0" />
+                                          <Insets top="5.0" />
                                        </HBox.margin>
                                     </TextField>
-                                    <Button mnemonicParsing="false" onAction="#setFinancial" prefHeight="31.0" prefWidth="52.0" text="Set">
+                                    <Button mnemonicParsing="false" onAction="#setFinancial" prefHeight="10.0" prefWidth="52.0" text="Set">
                                        <HBox.margin>
-                                          <Insets top="9.0" />
+                                          <Insets top="5.0" />
                                        </HBox.margin>
                                     </Button>
                                  </children>
@@ -220,10 +220,10 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <GridPane layoutX="39.0" layoutY="32.0" prefHeight="207.0" prefWidth="367.0">
+                        <GridPane layoutX="39.0" layoutY="32.0" prefHeight="117.0" prefWidth="537.0">
                           <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="383.0" minWidth="10.0" prefWidth="383.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="263.0" minWidth="10.0" prefWidth="154.0" />
                           </columnConstraints>
                           <rowConstraints>
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -231,7 +231,7 @@
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="191.0" text="Process Roster Tuitions" />
+                              <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="372.0" text="Process Roster Tuitions" />
                            </children>
                         </GridPane>
                      </children></AnchorPane>
@@ -241,10 +241,10 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <GridPane layoutX="36.0" layoutY="30.0" prefHeight="199.0" prefWidth="361.0">
+                        <GridPane layoutX="36.0" layoutY="30.0" prefHeight="98.0" prefWidth="528.0">
                           <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="279.0" minWidth="10.0" prefWidth="214.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="154.0" minWidth="10.0" prefWidth="104.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="381.0" minWidth="10.0" prefWidth="373.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="155.0" minWidth="0.0" prefWidth="155.0" />
                           </columnConstraints>
                           <rowConstraints>
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -252,9 +252,9 @@
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="303.0" text="Print Roster" />
-                              <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="254.0" text="Print Roster by Name" GridPane.rowIndex="1" />
-                              <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="248.0" text="Print Students with Payment" GridPane.rowIndex="2" />
+                              <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="374.0" text="Print Roster" />
+                              <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="432.0" text="Print Roster by Name" GridPane.rowIndex="1" />
+                              <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="421.0" text="Print Students with Payment" GridPane.rowIndex="2" />
                            </children>
                         </GridPane>
                      </children></AnchorPane>
@@ -262,7 +262,50 @@
             </Tab>
             <Tab text="Change Study Abroad">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <GridPane layoutX="9.0" layoutY="11.0" prefHeight="121.0" prefWidth="649.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="320.0" minWidth="10.0" prefWidth="133.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="519.0" minWidth="10.0" prefWidth="516.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="141.0" text="Name" />
+                              <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="143.0" text="Major" GridPane.rowIndex="1" />
+                              <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
+                                 <children>
+                                    <TextField fx:id="abroadStudentName" prefHeight="28.0" prefWidth="296.0" promptText="Student Name">
+                                       <HBox.margin>
+                                          <Insets top="7.0" />
+                                       </HBox.margin>
+                                    </TextField>
+                                 </children>
+                              </HBox>
+                              <HBox prefHeight="100.0" prefWidth="200.0" spacing="30.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                 <children>
+                                    <RadioButton mnemonicParsing="false" text="CS">
+                                       <toggleGroup>
+                                          <ToggleGroup fx:id="majorAbroad" />
+                                       </toggleGroup>
+                                    </RadioButton>
+                                    <RadioButton mnemonicParsing="false" text="EE" toggleGroup="$majorAbroad" />
+                                    <RadioButton mnemonicParsing="false" text="ME" toggleGroup="$majorAbroad" />
+                                    <RadioButton mnemonicParsing="false" text="IT" toggleGroup="$majorAbroad" />
+                                    <RadioButton mnemonicParsing="false" text="BA" toggleGroup="$majorAbroad" />
+                                 </children>
+                                 <GridPane.margin>
+                                    <Insets top="12.0" />
+                                 </GridPane.margin>
+                              </HBox>
+                              <Button mnemonicParsing="false" onAction="#changeStudentStatus" prefHeight="25.0" prefWidth="297.0" text="Change Student to Studying Abroad" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                           </children>
+                        </GridPane>
+                     </children></AnchorPane>
               </content>
             </Tab>
         </tabs>
