--- a/src/main/resources/com/example/p2gui/view.fxml
+++ b/src/main/resources/com/example/p2gui/view.fxml
@@ -252,9 +252,9 @@
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="374.0" text="Print Roster" />
-                              <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="432.0" text="Print Roster by Name" GridPane.rowIndex="1" />
-                              <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="421.0" text="Print Students with Payment" GridPane.rowIndex="2" />
+                              <Button fx:id="printRoster" mnemonicParsing="false" onAction="#printRoster" prefHeight="25.0" prefWidth="374.0" text="Print Roster" />
+                              <Button fx:id="printRosterByName" mnemonicParsing="false" onAction="#printRosterByName" prefHeight="25.0" prefWidth="432.0" text="Print Roster by Name" GridPane.rowIndex="1" />
+                              <Button fx:id="printStudentsWithPayment" mnemonicParsing="false" onAction="#printStudentsWithPayment" prefHeight="25.0" prefWidth="421.0" text="Print Students with Payment" GridPane.rowIndex="2" />
                            </children>
                         </GridPane>
                      </children></AnchorPane>
